- Added Armor Trims Materials
- Added Bows zooming - thanks to MaxBogomol for the code <3
- Added Vanishable to most of the items
- Added Ukrainian lang
- Added Swamp Wanderer (Redone him and added back to game)
- Added Shadewood Boat
- Added Shadewood Chest Boat
- Added Elemental manipulator crafts
- Added 2 new command's "addAllPages", "removeAllPages"
- Added Necromancer
- Added Undead

- Reworked keg a little
- Reworked Keyblocks (Umbral Blocks)
- Reworked Curio slot registry to newer system (Json based)
- Reworked Curio items
- Reworked Lexicon
- Reworked Mod Balance
- Reworked Shadewood tree
- Reworked Void Grass
- Reworked Goblin AI
- Reworked Goblin Model From default Model to Humanoid, so they can hold items in hand
- Reworked Kunais's

- Resprited Void stone
- Resprited Uncharged Shard
- Resprited Wicked Amethyst
- Resprited Wicked Amethyst Item
- Resprited Soul shard
- Resprited Cattail

- Renamed Uncharged Stone -> Uncharged Shard
- Renamed Soulstone -> Soul shard
- Renamed Amethyst (mod one btw) -> Wicked Amethyst
- Renamed Keyblocks to Umbral Blocks

- Prospectors pick now breaks ICE blocks much faster
- Server sided most of the particles
- Golden accessories makes Piglin neutral now
- Accessories will be damaged when player was attacked
- Goblins can take weapons to hand
- Goblins can spawn with weapons in hand with chance
- Necklaces will change their size depending on armor

- Fixed Misspells in Sounds tooltips
- Fixed Misspell in Jewelry JEI
- Fixed 1 pixel Y offset in jei
- Fixed Plants LootTable
- Fixed Baby Goblins
- Fixed Bug - Goblins tried to attack creative player when was hurt
- Fixed Bug - When multiple items were in cooldown, the sound would be very loud
- Fixed Bug - Necklaces now bigger than player 2'nd layer
- Fixed Entities attributes
- Fixed Crash - When HitResult.getType() was MISS game decides to crash (Blazereap)
- Fixed Server errors in KatanaItem and CorpsecleaverItem - Client sided a ClientConfig checking