@@ -112,7 +112,7 @@ public class MagmaSwordItem extends SwordItem implements Vanishable {
 
                 float damage = (float) (player.getAttributeValue(Attributes.ATTACK_DAMAGE) + 5) + EnchantmentHelper.getSweepingDamageRatio(player);
                 for (LivingEntity damagedEntity : hitEntities) {
-                    damagedEntity.hurt(worldIn.damageSources().generic(), damage);
+                    damagedEntity.hurt(worldIn.damageSources().playerAttack(player), (damage + EnchantmentHelper.getDamageBonus(stack, damagedEntity.getMobType())) * 1.35f);
                     damagedEntity.knockback(0.4F, player.getX() - entityLiving.getX(), player.getZ() - entityLiving.getZ());
                     damagedEntity.setSecondsOnFire(12);
                 }
